offer,coupon added and signup api is updated
